# FinalProjectCS202

./: .gitignore  CMakeLists.txt  FinalProjectCS202  README.md  docx.conf  save.v1
CrossingCat-1.2-osx-installer.app/Contents/: Info.plist
FinalProjectCS202/: AudioController.cpp  AudioController.h  Box.cpp  Box.h  CMakeLists.txt  Entity.cpp  Entity.h  Enums.h  FinalProjectCS202.cpp  FinalProjectCS202.h  Game.cpp  Game.h  GameState.h  MainMenuState.cpp  MainMenuState.h  Player.h  Renderable.h  SceneNode.cpp  SceneNode.h  SettingState.cpp  SettingState.h  SpriteStage.cpp  SpriteStage.h  State.cpp  State.h  TextureHolder.cpp  TextureHolder.h  TmpEntity.cpp
FinalProjectCS202/Template/: MainMenuTem.txt  MainMenuTemplate.txt  MainMenuTemplateCPY.txt  esc_windows.txt
data/: scores.txt
html/: AnimalLaneController_8cpp.html  AnimalLaneController_8cpp__incl.map  AnimalLaneController_8cpp__incl.md5  AnimalLaneController_8h.html  AnimalLaneController_8h__dep__incl.map  AnimalLaneController_8h__dep__incl.md5  AnimalLaneController_8h__incl.map  AnimalLaneController_8h__incl.md5  AnimalLaneController_8h_source.html  AnimationMachine_8cpp.html  AnimationMachine_8cpp__incl.map  AnimationMachine_8cpp__incl.md5  AnimationMachine_8h.html  AnimationMachine_8h__dep__incl.map  AnimationMachine_8h__dep__incl.md5  AnimationMachine_8h__incl.map  AnimationMachine_8h__incl.md5  AnimationMachine_8h_source.html  AudioController_8cpp.html  AudioController_8cpp__incl.map  AudioController_8cpp__incl.md5  AudioController_8h.html  AudioController_8h__dep__incl.map  AudioController_8h__dep__incl.md5  AudioController_8h__incl.map  AudioController_8h__incl.md5  AudioController_8h_source.html  Camera_8cpp.html  Camera_8cpp__incl.map  Camera_8cpp__incl.md5  Camera_8h.html  Camera_8h__dep__incl.map  Camera_8h__dep__incl.md5  Camera_8h__incl.map  Camera_8h__incl.md5  Camera_8h_source.html  Commuters_8cpp.html  Commuters_8cpp__incl.map  Commuters_8cpp__incl.md5  Commuters_8h.html  (+868 more)
html/search/: all_0.js  all_1.js  all_10.js  all_14.js  all_15.js  all_16.js  all_18.js  all_2.js  all_5.js  all_6.js  all_7.js  all_9.js  all_a.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_10.js  classes_11.js  classes_2.js  classes_3.js  classes_4.js  classes_6.js  classes_7.js  classes_8.js  classes_a.js  classes_b.js  classes_d.js  classes_e.js  classes_f.js  enums_0.js  enums_1.js  enums_2.js  enums_3.js  enums_4.js  enumvalues_0.js  enumvalues_1.js  enumvalues_10.js  enumvalues_11.js  (+89 more)
resources/Template/: GameTemplate.txt  MainMenuTemplate.txt  MainMenuTemplateCPY.txt  PauseMenuTemplate.txt  ScoreBoardTemplate.txt  SummaryBoardTemplate.txt  esc_windows.txt
resources/music/: music_zapsplat_easy_cheesy Audio Extracted.pkf
saved games/: 2023-01-01_18-26-36.meow  2023-01-02_13-11-05.meow  2023-01-02_13-35-54.meow  2023-01-02_13-36-24.meow  cross_river.meow  save.meow
src/: Animal.cpp  Animal.h  AnimalLaneController.cpp  AnimalLaneController.h  AnimationMachine.cpp  AnimationMachine.h  AnimationsByFrames.h  AudioController.cpp  AudioController.h  CMakeLists.txt  Camera.cpp  Camera.h  Commuters.cpp  Commuters.h  Consts.h  Effect.cpp  Effect.h  Effects.cpp  Effects.h  Entity.cpp  Entity.h  Enums.h  FinalProjectCS202.cpp  Game.cpp  Game.h  GameLoader.cpp  GameLoader.h  GameState.cpp  GameState.h  Lane.cpp  Lane.h  LaneController.cpp  LaneController.h  Level.cpp  Level.h  LevelGenerator.cpp  LevelGenerator.h  Light.cpp  Light.h  MainMenuState.cpp  (+66 more)
