# CMakeList.txt : Top-level CMake project file, do global configuration
# and include sub-projects here.
#
cmake_minimum_required (VERSION 3.13)

project ("FinalProjectCS202")
#add_executable(FinalProjectCS202 "FinalProjectCS202.cpp" "FinalProjectCS202.h")

# Include sub-projects.
add_subdirectory ("FinalProjectCS202")



